@@ -1773,5 +1773,9 @@
 		</File>
 	</Files>
 	<Globals>
+		<Global
+			Name="RESOURCE_FILE"
+			Value="SysTray.rc"
+		/>
 	</Globals>
 </VisualStudioProject>
